manifests/storage/minio/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    protocol: TCP
  selector:
    app: minio
